[gd_scene load_steps=14 format=2]

[ext_resource path="res://graphics/popup/terminal/screens/NumpadScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/RobotoMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://graphics/popup/terminal/buttons/blank_button.png" type="Texture" id=3]
[ext_resource path="res://graphics/popup/terminal/buttons/blank_button_hover.png" type="Texture" id=4]
[ext_resource path="res://graphics/popup/terminal/buttons/check_button.png" type="Texture" id=5]
[ext_resource path="res://graphics/popup/terminal/buttons/check_button_hover.png" type="Texture" id=6]
[ext_resource path="res://graphics/popup/terminal/buttons/x_button.png" type="Texture" id=7]
[ext_resource path="res://graphics/popup/terminal/buttons/x_button_hover.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="NumpadScreen" type="Control"]
margin_right = 246.0
margin_bottom = 164.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
solution = "123456"

[node name="Message" type="Label" parent="."]
margin_left = 14.0
margin_top = 12.0
margin_right = 234.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
text = "Please Enter Passcode:"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Code" type="RichTextLabel" parent="."]
margin_left = 14.0
margin_top = 40.0
margin_right = 234.0
margin_bottom = 60.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.72549, 1, 0.211765, 1 )
bbcode_enabled = true
bbcode_text = "[center]______[/center]"
meta_underlined = false
text = "______"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="Button1" type="TextureButton" parent="."]
margin_top = 83.4676
margin_right = 41.0
margin_bottom = 124.468
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button1"]
margin_right = 41.0
margin_bottom = 41.0
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "1"
flat = true

[node name="Button2" type="TextureButton" parent="."]
margin_left = 41.0
margin_top = 83.0
margin_right = 82.0
margin_bottom = 124.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button2"]
margin_top = 0.467621
margin_right = 41.0
margin_bottom = 41.4676
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "2"
flat = true

[node name="Button3" type="TextureButton" parent="."]
margin_left = 82.0
margin_top = 83.0
margin_right = 123.0
margin_bottom = 124.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button3"]
margin_top = 0.467621
margin_right = 41.0
margin_bottom = 41.4676
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "3"
flat = true

[node name="Button4" type="TextureButton" parent="."]
margin_left = 123.0
margin_top = 83.0
margin_right = 164.0
margin_bottom = 124.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button4"]
margin_right = 41.0
margin_bottom = 41.0
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "4"
flat = true

[node name="Button5" type="TextureButton" parent="."]
margin_left = 164.0
margin_top = 83.0
margin_right = 205.0
margin_bottom = 124.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button5"]
margin_top = 0.467621
margin_right = 41.0
margin_bottom = 41.4676
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "5"
flat = true

[node name="Button6" type="TextureButton" parent="."]
margin_top = 123.0
margin_right = 41.0
margin_bottom = 164.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button6"]
margin_top = 0.467621
margin_right = 41.0
margin_bottom = 41.4676
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "6"
flat = true

[node name="Button7" type="TextureButton" parent="."]
margin_left = 41.0
margin_top = 123.0
margin_right = 82.0
margin_bottom = 164.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button7"]
margin_right = 41.0
margin_bottom = 41.0
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "7"
flat = true

[node name="Button8" type="TextureButton" parent="."]
margin_left = 82.0
margin_top = 123.0
margin_right = 123.0
margin_bottom = 164.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button8"]
margin_top = 0.467621
margin_right = 41.0
margin_bottom = 41.4676
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "8"
flat = true

[node name="Button9" type="TextureButton" parent="."]
margin_left = 123.0
margin_top = 123.0
margin_right = 164.0
margin_bottom = 164.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button9"]
margin_top = 0.467621
margin_right = 41.0
margin_bottom = 41.4676
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "9"
flat = true

[node name="Button0" type="TextureButton" parent="."]
margin_left = 164.0
margin_top = 123.0
margin_right = 205.0
margin_bottom = 164.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Button0"]
margin_top = 0.467621
margin_right = 41.0
margin_bottom = 41.4676
mouse_filter = 1
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0941176, 0.0156863, 1 )
text = "0"
flat = true

[node name="OK" type="TextureButton" parent="."]
margin_left = 205.0
margin_top = 83.9352
margin_right = 246.0
margin_bottom = 124.935
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="X" type="TextureButton" parent="."]
margin_left = 205.0
margin_top = 123.468
margin_right = 246.0
margin_bottom = 164.468
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true
